develop third commit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head></head>
     <body>
         <h1>git project 예제</h1>
-        <h1>develop 2번째 추가 내용</h1>
+        <h1>develop 추가 내용</h1>
+        <h1>develop 추가 내용2</h1>
+        <h1>develop 추가 내용3</h1>
     </body>    
 </html>
